--- a/cart.html
+++ b/cart.html
@@ -245,17 +245,17 @@ font-family: 'Wellfleet', monospace;
         >
           <ul class="navbar-nav m-0">
             <li class="nav-item">
-              <a class="nav-link"  href="/index.html"
+              <a class="nav-link"  href="index.html"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/categories.html"
+              <a class="nav-link" href="categories.html"
                 >Categories</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link active"  href="/cart.html"
+              <a class="nav-link active"  href="cart.html"
                 >Card</a
               >
             </li>
