--- a/categories.html
+++ b/categories.html
@@ -87,13 +87,13 @@ font-family: 'Wellfleet', monospace;
             <div class="collapse navbar-collapse  justify-content-center" id="navbarNav">
                 <ul class="navbar-nav m-0 ">
                     <li class="nav-item">
-                        <a class="nav-link" href="/index.html">Home</a>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/categories.html">Categories</a>
+                        <a class="nav-link active" href="categories.html">Categories</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link"  href="/cart.html">Card</a>
+                        <a class="nav-link"  href="cart.html">Card</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link"  href="payment.html">Payments</a>
