--- a/contact.html
+++ b/contact.html
@@ -147,17 +147,17 @@ font-family: 'Wellfleet', monospace;
       >
         <ul class="navbar-nav m-0">
           <li class="nav-item">
-            <a class="nav-link"  href="/index.html"
+            <a class="nav-link"  href="index.html"
               >Home</a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link"  href="/categories.html"
+            <a class="nav-link"  href="categories.html"
               >Categories</a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link"  href="/cart.html"
+            <a class="nav-link"  href="cart.html"
               >Card</a
             >
           </li>
@@ -170,8 +170,6 @@ font-family: 'Wellfleet', monospace;
             <a class="nav-link "  href="contact.html"
               >Contact Us</a
             >
-          </li>
-          <li class="nav-item"></li>
         </ul>
       </div>
     </div>
