--- a/index.html
+++ b/index.html
@@ -401,13 +401,13 @@ font-family: 'Wellfleet', monospace;
         <div class="collapse navbar-collapse  justify-content-center" id="navbarNav">
             <ul class="navbar-nav m-0 ">
                 <li class="nav-item">
-                    <a class="nav-link active"  href="/index.html">Home</a>
+                    <a class="nav-link active"  href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link"  href="/categories.html">Categories</a>
+                    <a class="nav-link"  href="categories.html">Categories</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/cart.html">Card</a>
+                    <a class="nav-link" href="cart.html">Card</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" shref="payment.html">Payments</a>
@@ -429,13 +429,13 @@ font-family: 'Wellfleet', monospace;
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="/Assets/img/l5.jpg" class="d-block w-100" alt="Slide 1">
+            <img src="Assets/img/l5.jpg" class="d-block w-100" alt="Slide 1">
         </div>
         <div class="carousel-item">
-            <img src="/Assets/img/l3.jpg" class="d-block w-100" alt="Slide 2">
+            <img src="Assets/img/l3.jpg" class="d-block w-100" alt="Slide 2">
         </div>
         <div class="carousel-item">
-            <img src="/Assets/img/l1.jpg" class="d-block w-100" alt="Slide 3">
+            <img src="Assets/img/l1.jpg" class="d-block w-100" alt="Slide 3">
         </div>
     </div>
 
