--- a/payment.html
+++ b/payment.html
@@ -172,17 +172,17 @@ font-family: 'Wellfleet', monospace;
       >
         <ul class="navbar-nav m-0">
           <li class="nav-item">
-            <a class="nav-link"  href="/index.html"
+            <a class="nav-link"  href="index.html"
               >Home</a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/categories.html"
+            <a class="nav-link" href="categories.html"
               >Categories</a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link"  href="/cart.html"
+            <a class="nav-link"  href="cart.html"
               >Card</a
             >
           </li>
@@ -196,7 +196,7 @@ font-family: 'Wellfleet', monospace;
               >Contact Us</a
             >
           </li>
-          <li class="nav-item"></li>
+          
         </ul>
       </div>
     </div>
