--- a/contact.html
+++ b/contact.html
@@ -49,34 +49,26 @@ font-family: 'Wellfleet', monospace;
 
         
 
-      /* Adjust styling based on your design preferences */
-      /* Responsive styles */
       @media (max-width: 768px) {
         .navbar-collapse {
           background-color: #2c3e50;
-          /* Background color for the collapsed menu */
         }
 
         .navbar-nav {
           margin-top: 10px;
-          /* Adjust top margin for better spacing */
         }
 
         .navbar-nav .nav-item {
           text-align: center;
-          /* Center align items in the collapsed menu */
         }
 
         .navbar-nav .nav-link {
           padding: 10px;
-          /* Adjust padding for better touch experience */
           color: #ecf0f1 !important;
-          /* Text color for the collapsed menu items */
         }
 
         .navbar-toggler-icon {
           background-color: #ecf0f1;
-          /* Background color for the toggler icon */
         }
       }
       dropdown-menu {
@@ -100,7 +92,6 @@ font-family: 'Wellfleet', monospace;
             margin-top: 20px;
       }
       .footer {
-                /* background-color: #4CAF50; */
                 color: #fff;
                 text-align: center;
                 /* padding: 20px; */
@@ -120,7 +111,6 @@ font-family: 'Wellfleet', monospace;
 </head>
 <body>
 
-    <!-- Navbar -->
     <nav
     class="navbar navbar-expand-lg navbar-dark"
     style="background-color: #383838d7"
@@ -223,7 +213,6 @@ font-family: 'Wellfleet', monospace;
 
     <script>
         function submitForm() {
-    // Simple form validation
     var name = document.getElementById('name').value;
     var email = document.getElementById('email').value;
     var message = document.getElementById('message').value;
@@ -233,10 +222,10 @@ font-family: 'Wellfleet', monospace;
         return;
     }
 
-    // Display confirmation message
     document.getElementById('contactForm').style.display = 'none';
     document.getElementById('confirmationMessage').style.display = 'block';
 }
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
     </script>
 </body>
