--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Library</title>
-    <!-- Bootstrap CSS link -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofTmL3xuFnp0D0iEPDIJfiC2L1ddEm6W" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -49,37 +48,29 @@
         border: none;
       }
 
-      /* Responsive styles */
       @media (max-width: 768px) {
         .navbar-collapse {
           background-color: #2c3e50;
-          /* Background color for the collapsed menu */
         }
 
         .navbar-nav {
           margin-top: 10px;
-          /* Adjust top margin for better spacing */
         }
 
         .navbar-nav .nav-item {
           text-align: center;
-          /* Center align items in the collapsed menu */
         }
 
         .navbar-nav .nav-link {
           padding: 10px;
-          /* Adjust padding for better touch experience */
           color: #ecf0f1 !important;
-          /* Text color for the collapsed menu items */
         }
 
         .navbar-toggler-icon {
           background-color: #ecf0f1;
-          /* Background color for the toggler icon */
         }
       }
 
-      /* Dropdown styling */
       .dropdown-menu {
         background-color: #343a40;
       }
@@ -143,7 +134,6 @@
                 border: none;
               }
              .footer {
-                /* background-color: #4CAF50; */
                 color: #fff;
                 text-align: center;
                 /* padding: 20px; */
@@ -387,7 +377,6 @@ font-family: 'Wellfleet', monospace;
 
 <body>
 
-   <!-- Navbar -->
    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #383838d7;">
     <div class="container">
         <a class="navbar-brand" href="#">
@@ -484,22 +473,21 @@ font-family: 'Wellfleet', monospace;
 
 
 
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.8/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script>
-  let data = []; // Variable to store book data
+  let data = []; 
 
-  // Function to fetch and display books
   async function displayBooks() {
     try {
       const response = await fetch('books.json'); 
-      data = await response.json(); // Store book data in the data variable
+      data = await response.json(); 
 
       const bookRow = document.getElementById('book-row');
 
-      // Iterate through the book data
       data.forEach((book) => {
         const bookCard = document.createElement('div');
         bookCard.classList.add('col-md-3', 'mb-4');
@@ -515,7 +503,6 @@ font-family: 'Wellfleet', monospace;
           </div>
         `;
 
-        // Append the book card to the row
         bookRow.appendChild(bookCard);
       });
     } catch (error) {
@@ -523,7 +510,6 @@ font-family: 'Wellfleet', monospace;
     }
   }
 
-  // Function to add an item to the cart
   function addToCart(title, author, price) {
     const cartItem = {
       title: title,
@@ -532,36 +518,29 @@ font-family: 'Wellfleet', monospace;
       quantity: 1,
     };
 
-    // Retrieve existing cart items from local storage or initialize an empty array
     let cartItems = JSON.parse(localStorage.getItem('cartItems')) || [];
 
-    // Check if the item already exists in the cart
     const existingItem = cartItems.find((item) => item.title === title);
 
     if (existingItem) {
-      existingItem.quantity += 1; // Increment the quantity
+      existingItem.quantity += 1; 
     } else {
-      cartItems.push(cartItem); // Add the new item to the cart
+      cartItems.push(cartItem);
     }
 
-    // Update the cart items in local storage
     localStorage.setItem('cartItems', JSON.stringify(cartItems));
 
-    // Alert the user that the item has been added to the cart (you can customize this)
     alert(`${title} has been added to the cart!`);
 
-    // Note: The above code shows an alert message for adding items to the cart. You can customize this part or implement a more sophisticated cart management system as needed.
   }
 
-  // Function to perform a search
   function performSearch() {
     const searchInput = document.getElementById('search-input');
     const searchTerm = searchInput.value.toLowerCase();
 
     const bookRow = document.getElementById('book-row');
-    bookRow.innerHTML = ''; // Clear the existing book cards
+    bookRow.innerHTML = ''; 
 
-    // Filter and display books that match the search term
     data.forEach((book) => {
       if (book.title.toLowerCase().includes(searchTerm) || book.author.toLowerCase().includes(searchTerm)) {
         const bookCard = document.createElement('div');
@@ -578,18 +557,16 @@ font-family: 'Wellfleet', monospace;
           </div>
         `;
 
-        // Append the matching book card to the row
         bookRow.appendChild(bookCard);
       }
     });
   }
 
-  // Add a click event listener to the search button
   const searchButton = document.getElementById('search-button');
   searchButton.addEventListener('click', performSearch);
 
-  // Call the function to display books after the page is fully loaded
   document.addEventListener('DOMContentLoaded', displayBooks);
+    
 </script>
 </body>
 
