--- a/payment.html
+++ b/payment.html
@@ -26,11 +26,7 @@
           font-size: 1.5rem;
         }
 
-        /* .navbar-brand span {
-      font-weight: bold;
-      color: #ecf0f1;
-     } */
-
+ 
      .navbar {
     font-weight: bold;
     font-size: 1.3rem;
@@ -50,34 +46,26 @@
         border: none;
       }
 
-      /* Adjust styling based on your design preferences */
-      /* Responsive styles */
       @media (max-width: 768px) {
         .navbar-collapse {
           background-color: #2c3e50;
-          /* Background color for the collapsed menu */
         }
 
         .navbar-nav {
           margin-top: 10px;
-          /* Adjust top margin for better spacing */
         }
 
         .navbar-nav .nav-item {
           text-align: center;
-          /* Center align items in the collapsed menu */
         }
 
         .navbar-nav .nav-link {
           padding: 10px;
-          /* Adjust padding for better touch experience */
           color: #ecf0f1 !important;
-          /* Text color for the collapsed menu items */
         }
 
         .navbar-toggler-icon {
           background-color: #ecf0f1;
-          /* Background color for the toggler icon */
         }
       }
       dropdown-menu {
@@ -145,7 +133,6 @@ font-family: 'Wellfleet', monospace;
 </head>
 <body>
    
-    <!-- Navbar -->
     <nav
     class="navbar navbar-expand-lg navbar-dark"
     style="background-color: #383838d7"
@@ -211,7 +198,6 @@ font-family: 'Wellfleet', monospace;
             </div>
         </div>
 
-        <!-- Payment form -->
         <div class="container my-5">
             <h2>Payment Information</h2>
             <form id="payment-form">
@@ -230,7 +216,6 @@ font-family: 'Wellfleet', monospace;
                         <input type="text" class="form-control" id="cvv" placeholder="123">
                     </div>
                 </div>
-                <!-- Add a button to initiate payment -->
                 <button type="button" class="btn btn-warning" onclick="processPayment()">Submit Payment</button>
             </form>
         </div>
@@ -245,29 +230,23 @@ font-family: 'Wellfleet', monospace;
         </footer>
 
         <script>
-            // Function to process the payment
             function processPayment() {
-                // Perform the payment processing logic here
                 alert('Payment processed successfully!');
-                // You may redirect the user to a confirmation page or perform other actions
             }
         </script>
 
-        <!-- JavaScript -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.8/dist/umd/popper.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
         <script>
-            // Function to fetch and display payment receipt
             function displayPaymentReceipt() {
                 const receiptContent = document.getElementById('receipt-content');
                 receiptContent.innerHTML = '';
 
-                // Retrieve cart items from local storage
                 const cartItems = JSON.parse(localStorage.getItem('cartItems')) || [];
 
-                // Display receipt items
                 cartItems.forEach((cartItem) => {
                     const receiptItem = document.createElement('div');
                     receiptItem.classList.add('receipt-item');
@@ -281,7 +260,6 @@ font-family: 'Wellfleet', monospace;
                     receiptContent.appendChild(receiptItem);
                 });
 
-                // Display total amount
                 const totalPrice = cartItems.reduce((total, item) => {
                     return total + item.price * item.quantity;
                 }, 0);
@@ -290,7 +268,6 @@ font-family: 'Wellfleet', monospace;
                 receiptContent.appendChild(totalAmount);
             }
 
-            // Call the function
             displayPaymentReceipt();
         </script>
 
